# Server/index.js
@@ -8,7 +8,7 @@ import { Server } from 'socket.io'
 import http from 'http'
 import session from "express-session"
 import swaggerUi from 'swagger-ui-express'
-import { verifyAdmin, verifyToken, verifyUser } from "./middleware/verify.js"
+import { verifyAdmin, verifyToken } from "./middleware/verify.js"
 import { clearTokenList } from "./service/jwt.js"
 // import { NOTIFY_EVENT, SESSION_AGE } from "./constant.js"
 // import { addSocketSession, handleDisconnect, sendNotify } from "./socket/handle.js"
@@ -19,8 +19,6 @@ import { checkOverload } from "./helper/checkConnectdb.js"
 import { SESSION_AGE } from "./constant.js"
 import adminRoute from "./router/admin/index.js"
 import TaiKhoanRoute from "./router/TaiKhoan.js"
-import SinhVienRoute from "./router/SinhVien.js"
-import GiangVienRoute from "./router/GiangVien.js"
 
 const swaggerDocument = YAML.load('./swagger.yaml')
 
@@ -66,7 +64,7 @@ app.use(helmet.crossOriginResourcePolicy({ policy: "cross-origin" }));
 
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
-    .use('/api/admin', verifyToken, verifyAdmin, adminRoute)
+    .use('/api/admin', adminRoute)
     .use('/api/tai-khoan', TaiKhoanRoute)
 
 app.use('/*', async (req, res) => {
