# Server/router/admin/index.js
@@ -2,12 +2,14 @@ import express from "express"
 import ChucNangAdminRoute from "./ChucNang.js"
 import QuyenTaiKhoanAdminRoute from "./QuyenTaiKhoan.js"
 import TaiKhoanAdminRoute from "./TaiKhoan.js";
+import NhanVienAdminRoute from "./NhanVien.js";
 
 const adminRoute = express.Router();
 
 adminRoute.use('/chuc-nang', ChucNangAdminRoute)
         .use('/quyen-tai-khoan', QuyenTaiKhoanAdminRoute)
         .use('/tai-khoan', TaiKhoanAdminRoute)
+        .use('/nhan-vien', NhanVienAdminRoute)
 
 export default adminRoute
 
