# Server/validation/NhanVien.js
@@ -1,32 +1,28 @@
 import Error from "../helper/error.js"
 
-export const KtraDuLieuGiangVienKhiThem = data => {
+export const KtraDuLieuNhanVienKhiThem = data => {
     const error = new Error()
 
-    error.isRequired(data.MaGV, "MaGV")
-        .isRequired(data.HoGV, "HoGV")
-        .isRequired(data.TenGV, "TenGV")
+    error.isRequired(data.MaNV, "MaNV")
+        .isRequired(data.HoNV, "HoNV")
+        .isRequired(data.TenNV, "TenNV")
         .isRequired(data.Email, "Email")
         .isRequired(data.SoDienThoai, "SoDienThoai")
         .isRequired(data.GioiTinh, "GioiTinh")
         .isRequired(data.NgaySinh, "NgaySinh")
-        .isRequired(data.DonViCongTac, "DonViCongTac")
-        .isRequired(data.TrinhDo, "TrinhDo")
 
     return error.get()
 }
 
-export const KtraDuLieuGiangVienKhiChinhSua = data => {
+export const KtraDuLieuNhanVienKhiChinhSua = data => {
     const error = new Error()
 
-    error.isRequired(data.HoGV, "HoGV")
-        .isRequired(data.TenGV, "TenGV")
+    error.isRequired(data.HoNV, "HoNV")
+        .isRequired(data.TenNV, "TenNV")
         .isRequired(data.Email, "Email")
         .isRequired(data.SoDienThoai, "SoDienThoai")
         .isRequired(data.GioiTinh, "GioiTinh")
         .isRequired(data.NgaySinh, "NgaySinh")
-        .isRequired(data.DonViCongTac, "DonViCongTac")
-        .isRequired(data.TrinhDo, "TrinhDo")
 
     return error.get()
 }
